stap-2/sensor-simulator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor-simulator
  namespace: backend-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensor-simulator
  template:
    metadata:
      labels:
        app: sensor-simulator
    spec:
      containers:
        - name: sensor-simulator
          image: whu1/sensor-simulator:2.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
