stap-2/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: backend-workshop
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
      nodePort: 30673
    - name: http
      port: 15672
      targetPort: 15672
      nodePort: 31673
