stap-2/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-backend-workshop-ingress
  namespace: backend-workshop
spec:
  ingressClassName: nginx
  rules:
    - host: rabbitmq.workshop.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-service
                port:
                  number: 15672
